# cpp_directx_simple_game

./: CMakeLists.txt  README.md  main.cpp  p_window.cpp  p_window.h  p_windows_simple.h  window_class_debug.cpp  window_class_debug.h
